# Expect

./: CMakeLists.txt  LICENSE  README.md
Documentation/: README.md
Documentation/Reference/: README.md
Documentation/Reference/Assertions/: EXPECT.md  EXPECT_ANY_EXCEPTION.md  EXPECT_APPROX.md  EXPECT_EXCEPTION.md  EXPECT_NEAR.md  EXPECT_NO_EXCEPTION.md  EXPECT_WITHIN.md  README.md
Documentation/Reference/General/: SUITE.md  TEST.md
Documentation/Reference/Macros/: BENCHMARK.md  EXPECT_TOLERANCE.md  MESSAGE.md  README.md  RUN_COMMAND_LINE_TESTS.md  RUN_ENABLED_TESTS.md  SECTION.md  SETUP.md  SHARE.md  SHARED.md  SUITE.md  TEARDOWN.md  TEST.md  TEST_CUSTOM_COMPARE.md  TEST_STRINGIFY.md  TEST_STRINGIFY_GENERIC.md
Documentation/Reference/Matchers/: EXPECT_THAT.md  MATCHER.md  MATCHER_RESULT.md  README.md  (+15 more)
Documentation/Tutorials/: Benchmarking.md  Building.md  Custom-Comparison.md  Custom-Drivers.md  Custom-Matchers.md  Custom-String-Conversion.md  Quick-Start.md  README.md  Running.md  Test-Case.md  Test-Suite.md  Using-Assertions.md  Using-Matchers.md
Include/: Expect  Expect Common.h
Include/Benchmarking/: Benchmark.h
Include/Driver/: CommandLineDriver.h  Driver.h  TestState.h
Include/Evaluate/: Evaluate.h  Expect Float.h  Expect.h  Expression.h  Section.h
Include/Expression/: ApproxExpression.h  ExactExpression.h  Expression.h  MiscExpression.h  NearExpression.h  WithinExpression.h
Include/Global/: Environment.h  Iterate.h  StringBuilder.h  toString.h
Include/Matching/: Match.h  Matcher.h  Matchers.h
Include/Suite/: Setup.h  Suite.h
Include/Test/: Test.h
Source/: AutoExpect.cpp  Expect.cpp
Source/Benchmarking/: Benchmark.cpp
Source/Driver/: CommandLineDriver.cpp  Driver.cpp  TestState.cpp  main.cpp
Source/Evaluate/: Evaluate.cpp  Expression.cpp  Section.cpp
Source/Expression/: ExactExpression.cpp  MiscExpression.cpp
Source/Global/: toString.cpp
Source/Matching/: Matchers.cpp
Source/Suite/: Suite.cpp
Source/Test/: Test.cpp
Tests/General/: benchmarks.cpp  main.cpp
(+16 files in other folders)
